tests/NormalTests/paczka1/fuzzy1/19929314.err
Error in line 3: fdp A291 3,3
Error in line 12: qtDrXj S731 84,1
Error in line 20: qtDrXj A623 51,9
Error in line 25: qtDrXj S233 30,7
Error in line 29: qtDrXj S731 41,7
Error in line 28: A623 A623 27,8
